# module4

./: .gitignore  pyproject.toml
MiniInst/: manage.py  posts.py
MiniInst/MiniInst/: asgi.py  settings.py  urls.py  wsgi.py
MiniInst/backoffice/: admin.py  urls.py  views.py
MiniInst/backoffice/migrations/: 0001_initial.py
MiniInst/backoffice/models/: __init__.py  user_report.py
MiniInst/comments/: admin.py  forms.py  urls.py  views.py
MiniInst/comments/migrations/: 0001_initial.py
MiniInst/comments/models/: __init__.py  comment.py
MiniInst/direct/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
MiniInst/direct/migrations/: 0001_initial.py  0002_groupchat_groupmessage.py  0003_directmessage_edited.py
MiniInst/direct/models/: __init__.py  direct.py  direct_message.py  group_chat.py  group_message.py
MiniInst/hashtags/: models.py  views.py
MiniInst/posts/: admin.py  forms.py  urls.py  views.py
MiniInst/posts/migrations/: 0001_initial.py  0002_alter_post_author.py  0003_like.py  0004_post_title.py
MiniInst/posts/models/: __init__.py  like.py  post.py
MiniInst/search/: urls.py  views.py
MiniInst/search/templates/: index.html
MiniInst/stories/: admin.py  forms.py  urls.py  utils.py  views.py
MiniInst/templates/: base.html
MiniInst/users/: admin.py  forms.py  models.py  urls.py  views.py
insta_clone/: db.sqlite3  manage.py
insta_clone/insta_clone/: asgi.py  settings.py  urls.py  wsgi.py
insta_clone/posts/: admin.py  forms.py  models.py  urls.py  views.py
insta_clone/templates/: create_post.html
(+26 files in other folders)
