[project]
name = "module4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "channels>=4.3.1",
    "channels-redis>=4.3.0",
    "django>=5.2.4",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
